--- a/main.css
+++ b/main.css
@@ -9,6 +9,11 @@ main {
   border: solid green 5px;
   border-top-left-radius: 20px;
   border-bottom-right-radius: 20px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 button {
